--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -13,7 +13,7 @@
       <nav></nav>	    
     </header>	  
     <main>
-      <h1>Homepage</h1>	    
+      <header>Homepage</header>	    
       <section>
         <h2>We help you build your brand!</hd2>	      
       </section>
@@ -36,12 +36,14 @@
 	<article>Article 3</article>      
       </section>
       <section>
-        <h2>LTestimonials</hd2>	      
+        <h2>Testimonials</hd2>	      
 	<article>Testimonial 1</article>      
 	<article>Testimonial 2</article>      
 	<article>Testimonial 3</article>      
       </section>
-      <section>Contact section</section>
+      <section>Contact section
+	<h2> Contact</hd2>      
+      </section>
       <aside>Aside</aside>
     </main>
     <footer>Footer</footer>
