--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -17,8 +17,8 @@
       <section>
         <h2>We help you build your brand!</hd2>	      
       </section>
-        <h2>Services</hd2>	      
       <section>
+        <h2>Services</hd2>	      
       </section>
       <section>
         <h2>Works</hd2>	      
@@ -41,8 +41,8 @@
 	<article>Testimonial 2</article>      
 	<article>Testimonial 3</article>      
       </section>
-      <section>Contact section
-	<h2> Contact</hd2>      
+      <section>
+	<h2>Contact</hd2>      
       </section>
       <aside>Aside</aside>
     </main>
