fix1 Level 2-headings

--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -13,7 +13,7 @@
       <nav></nav>	    
     </header>	  
     <main>
-      <header>Homepage</header>	    
+      <h1>Homepage</h1>	    
       <section>
         <h2>We help you build your brand!</h2>	      
       </section>
@@ -44,7 +44,6 @@
       <section>
 	<h2>Contact</h2>      
       </section>
-      <aside>Aside</aside>
     </main>
     <footer>Footer</footer>
   </body>
