--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -13,7 +13,7 @@
       <nav></nav>	    
     </header>	  
     <main>
-      <header>Homepage</header>	    
+      <h1>Homepage</h1>	    
       <section>
         <h2>We help you build your brand!</h2>	      
       </section>
