--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -73,6 +73,6 @@
       </section>
       <aside>Aside</aside>
     </main>
-    <footer>Footer</f:ooter>
+    <footer>Footer</footer>
   </body>
 </html>
