--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -102,6 +102,6 @@
       </section>
       <aside>Aside</aside>
     </main>
-    <footer>Footer</f:ooter>
+    <footer>Footer</footer>
   </body>
 </html>
