fix1 Structure your sections

--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -82,7 +82,7 @@
           <header>
             <h2>Latest news</h2>
           </header>
-          </div>	      
+          <div>	      
 	    <article>
               <p>Career</p>
 	      <h3>Hoc loco tenere se Triarius non potuit.</h3>
