--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -146,21 +146,21 @@
       </section>
       <!-- Details -->
       <section>
-	 <header><h2>Details</h2><header> 
+	 <header><h2>Details</h2></header> 
          <div>
-	   <header><h3>Default</h3><header> 
+	   <header><h3>Default</h3></header> 
            <details>
 	     <summary>Show/Hide me</summary>	   
 	     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
            </details>		   
 	 </div>	 
 	 <div>
-	   <h3>Open</h3>> 
+	   <h3>Open</h3>
            <details open>			   
 	     <summary>Always open</summary>	   
 	     <p> Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
 	   </details>  
-	 </div	 
+	 </div>	 
       </section>	      
     </main>
     <footer></footer>
