--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -148,17 +148,17 @@
       <section>
 	 <header><h2>Details</h2></header> 
          <div>
-	   <header><h3>Default</h3></header> 
+	   <h3>Default</h3> 
            <details>
 	     <summary>Show/Hide me</summary>	   
-	     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+	     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
            </details>		   
 	 </div>	 
 	 <div>
 	   <h3>Open</h3>
            <details open>			   
 	     <summary>Always open</summary>	   
-	     <p> Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+	     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
 	   </details>  
 	 </div>	 
       </section>	      
