--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -148,7 +148,7 @@
 	    <article>
 	      <blockquote>	    
 	       <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.<p> 	  
-	       <cite>Sven H.</cite
+	       <cite>Sven H.</cite>
               </blockquote>  
 	    </article>
           </div>  
@@ -165,7 +165,7 @@
           <div>  
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
           </div> 
-	  <a href="contact.html">Get in touch</a>"
+	  <a href="contact.html">Get in touch</a>
         </div>
       </section>
     </main>
