--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -158,7 +158,7 @@
 	      <img src="./images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height"=100px">
 	      <blockquote>	    
 	       <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.<p> 	  
-	       <cite>Sven H.</cite
+	       <cite>Sven H.</cite>
               </blockquote>  
 	    </article>
           </div>  
@@ -175,7 +175,7 @@
           <div>  
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
           </div> 
-	  <a href="contact.html">Get in touch</a>"
+	  <a href="contact.html">Get in touch</a>
         </div>
       </section>
     </main>
